<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.redes.medidor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.redes.medidor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.redes.medidor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
<!--    fragmentos personalizados-->
    <fragment
        android:id="@+id/vehiculos"
        android:name="com.redes.medidor.ui.vehiculo.VehiculosFragment"
        android:label="@string/casco_moto"
        tools:layout="@layout/vehiculos_fragment"/>
    <fragment
        android:id="@+id/estadisticas"
        android:name="com.redes.medidor.ui.estadisticas.EstadisticasFragment"
        android:label="@string/stats"
        tools:layout="@layout/estadisticas_fragment"/>
</navigation>